--- a/Source/app/src/main/AndroidManifest.xml
+++ b/Source/app/src/main/AndroidManifest.xml
@@ -13,10 +13,11 @@
         android:theme="@style/Theme.AppSellPhone"
         tools:targetApi="31">
         <activity
+            android:name=".DetailProduct"
+            android:exported="false" />
+        <activity
             android:name=".ShowProductActivity"
-            android:exported="false" >
-
-        </activity>
+            android:exported="false"></activity>
         <activity
             android:name=".RegisterActivity"
             android:exported="false" />
