--- a/Source/app/src/main/AndroidManifest.xml
+++ b/Source/app/src/main/AndroidManifest.xml
@@ -17,11 +17,14 @@
         android:theme="@style/Theme.AppSellPhone"
         tools:targetApi="31">
         <activity
+            android:name=".SearchProduct"
+            android:exported="false" />
+        <activity
             android:name=".CategoryProduct"
             android:exported="false" />
         <activity
             android:name=".WelcomeActivity"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".DetailProduct"
             android:exported="false" />
@@ -33,7 +36,7 @@
             android:exported="false" />
         <activity
             android:name=".LoginActivity"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
