--- a/Source/app/src/main/AndroidManifest.xml
+++ b/Source/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:theme="@style/Theme.AppSellPhone"
         tools:targetApi="31">
         <activity
+            android:name=".Cart"
+            android:exported="false" />
+        <activity
             android:name=".SearchProduct"
             android:exported="false" />
         <activity
@@ -45,9 +48,7 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="false">
-
-        </activity>
+            android:exported="false"></activity>
     </application>
 
 </manifest>
