update information, watch order

--- a/Source/app/src/main/AndroidManifest.xml
+++ b/Source/app/src/main/AndroidManifest.xml
@@ -17,6 +17,12 @@
         android:theme="@style/Theme.AppSellPhone"
         tools:targetApi="31">
         <activity
+            android:name=".OrderDetailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".InfomationActivity"
+            android:exported="false" />
+        <activity
             android:name=".Cart"
             android:exported="false" />
         <activity
@@ -48,7 +54,7 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="false"></activity>
+            android:exported="false" />
     </application>
 
 </manifest>
